examples/k8s/cralocal.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: cra-deployment
  labels:
    app: cra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cra
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: cra
    spec:
      containers:
        - name: clamav-rest-api
          # Run this image
          image: acraks01.azurecr.io/cra:1.1
          ports:
            - containerPort: 3000
              protocol: TCP
              name: cra-port
---
apiVersion: v1
kind: Service
metadata:
  name: cra-service
spec:
  type: ClusterIP
  selector:
    app: cra
  ports:
    - protocol: TCP
      port: 3000
      targetPort: cra-port
