examples/k8s/ingress.yml
# kuberenets version 1.8 and above
# Nginx ingress resource (/|$)(.*)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/version
        pathType: Exact
        backend:
          service:
            name: cra-service
            port:
              number: 3000
      - path: /api/v1/scan
        pathType: Exact
        backend:
          service:
            name: cra-service
            port:
              number: 3000
